--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ init_mathjax();
 		<div id="header-nav" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav">
             <li><a target="_blank" href="index.html">صفحه اصلی</a></li>
-            <li class="dropdown"> <a class="dropdown-toggle" href="#">جلسه ها</a>
+            <li class="dropdown"> <a class="dropdown-toggle" href="#">جلسه‌ها</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="lecture1.html">جلسه اول</a></li>
                 <li><a class="dropdown-item" href="lecture2.html">جلسه دوم</a></li>
@@ -150,7 +150,7 @@ init_mathjax();
 	<div class="idocs-navigation bg-light">
       <ul class="nav flex-column ">
         <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
-        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه ای بر نظريه مجموعه ها</a></li>
+        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظریه مجموعه‌ها</a></li>
       </ul>
     </div>
     
@@ -163,7 +163,17 @@ init_mathjax();
 		============================ -->
         <section id="idocs_start">
           <h1>صفحه اصلی</h1>
-          <p>بعدا کامل شود.</p>
+          <p>سلام خوش اومدین</p><br><br>
+          <p>
+          ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران در این پروژه سعی می‌کنیم 
+          درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.
+          </p><br><br>
+          <p>
+          ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. برای دانلود‌شون می‌تونید به این لینک برید.
+          </p><br><br>
+          <p>
+          راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir
+          </p><br><br>
         <hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
