--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   }
   h1,h2,h3,h4,h5,h6{
     font-family: 'IranSansBold';
+    color: #008E89;
   }
 
 </style>
@@ -162,18 +163,14 @@ init_mathjax();
         <!-- Getting Started
 		============================ -->
         <section id="idocs_start">
-          <h1>صفحه اصلی</h1>
-          <p>سلام خوش اومدین</p><br><br>
-          <p>
-          ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران در این پروژه سعی می‌کنیم 
-          درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.
-          </p><br><br>
-          <p>
-          ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. برای دانلود‌شون می‌تونید به این لینک برید.
-          </p><br><br>
-          <p>
-          راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir
-          </p><br><br>
+          <h1>صفحه اصلی</h1><br>
+          <p>سلام خوش اومدین</p><br>
+          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران در این پروژه سعی می‌کنیم 
+          درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.</p><br>
+          <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
+          برای دانلود‌شون می‌تونید به این لینک برید.</p><br>
+          <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
+          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br>
         <hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
