--- a/lecture1.html
+++ b/lecture1.html
@@ -39,6 +39,7 @@
   }
   h1,h2,h3,h4,h5,h6{
     font-family: 'IranSansBold';
+    color: #008E89;
   }
 
 </style>
@@ -121,7 +122,7 @@ init_mathjax();
 		<div id="header-nav" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav">
             <li><a target="_blank" href="index.html">صفحه اصلی</a></li>
-            <li class="dropdown"> <a class="dropdown-toggle" href="#">جلسه ها</a>
+            <li class="dropdown"> <a class="dropdown-toggle" href="#">جلسه‌ها</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="lecture1.html">جلسه اول</a></li>
                 <li><a class="dropdown-item" href="lecture2.html">جلسه دوم</a></li>
@@ -150,7 +151,7 @@ init_mathjax();
 	<div class="idocs-navigation bg-light">
       <ul class="nav flex-column ">
         <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
-        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه ای بر نظريه مجموعه ها</a></li>
+        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظريه مجموعه‌ها</a></li>
       </ul>
     </div>
     
@@ -162,13 +163,13 @@ init_mathjax();
         <!-- Getting Started
 		============================ -->
         <section id="idocs_start">
-          <h3>جلسه اول: مقدمه ای بر نظریه مجموعه ها</h3>
+          <h3>جلسه اول: مقدمه‌ای بر نظریه مجموعه‌ها</h3>
           <style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/jkMhT/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
           
           <br><br>
 
-          <p><strong>مجموعه:</strong> دسته ای از عناصر متمایز را مجموعه گویند.</p>
-          <p><strong>زیر مجموعه:</strong> اگر هر عضو مجموعه $A$ متعلق به مجموعه $B$ نیز باشد، مجموعه $A$ زیرمجموعه مجموعه $B$ است. به بیان ریاضی: $A\subset B$</p>
+          <p><strong>مجموعه:</strong> دسته‌ای از عناصر متمایز را مجموعه گویند.</p>
+          <p><strong>زیرمجموعه:</strong> اگر هر عضو مجموعه $A$ متعلق به مجموعه $B$ نیز باشد، مجموعه $A$ زیرمجموعه مجموعه $B$ است. به بیان ریاضی: $A\subset B$</p>
           <p><strong>مجموعه مساوی:</strong>   اگر و تنها اگر $A\subset B$ و $B\subset A$ آنگاه دو مجموعه $A$ و $B$ مساوی یکدیگر هستند.</p>
           <p><strong>مجموعه مرجع:</strong>    مجموعه‌ای که شامل تمام عناصر است و با $\Omega$ نمایش داده می‌شود</p>
           <p><strong>مجموعه تهی:</strong>     مجموعه‌ای که فاقد عضو است و با $\{\}$ یا $\emptyset$ نمایش داده می‌شود.</p>
