--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ init_mathjax();
           <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران در این پروژه سعی می‌کنیم 
           درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.</p><br>
           <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
-          برای دانلود‌شون می‌تونید به این لینک برید.</p><br>
+          برای دانلود‌شون می‌تونید به <a href="https://www.aparat.com/ProbStat">لینک</a> این  برید.</p><br>
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
           ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br>
         <hr>
