--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ init_mathjax();
           <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
           برای دانلود‌شون می‌تونید به <a href="https://www.aparat.com/ProbStat">لینک</a> این  برید.</p><br>
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
-          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br>
+          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br>
         <hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
