--- a/lecture2.html
+++ b/lecture2.html
@@ -39,6 +39,7 @@
   }
   h1,h2,h3,h4,h5,h6{
     font-family: 'IranSansBold';
+    color: #008E89;
   }
 
 </style>
@@ -163,14 +164,14 @@ init_mathjax();
         <!-- Getting Started
 		============================ -->
         <section>
-          <h1>جلسه دوم</h1>
+          <h3>جلسه دوم</h3>
           
           <style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/5aSiJ/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
         </section>
         <section id="section1">  
           <br><br>
         
-          <h1 id="#section1">اصول موضوعه كولموگروف</h1>
+          <h6 id="#section1">اصول موضوعه كولموگروف</h6>
           <p>به هر پیشامد $A$ عدد $P(A)$ نسبت داده می‌شود به طوریکه:</p>
 <p>اصل یک: $P(A)\geq 0$</p>
 <p>اصل دو: 
@@ -188,9 +189,9 @@ $$P(A_1\cup A_2\cup ...\cup A_n )=P(A_1 )+P(A_2 )+...+P(A_n )$$<p></p>
     $$P(A_1\cup A_2\cup...)=P(A_1 )+P(A_2 )+...$$</p>
     </section>
     <section id="section2">  
-      <h1>
+      <h6>
         قضایای پایه احتمال
-      </h1>
+      </h6>
       <p>قضیه یک:
     $P(\bar{A})=1-P(A)$</p>
 <p>قضیه دو:
@@ -210,7 +211,7 @@ $$P(A_1\cup A_2\cup ...\cup A_n )=P(A_1 )+P(A_2 )+...+P(A_n )$$<p></p>
 <p>قضیه شش: برای هر دو مجموعه $A$ و $B$ داریم: $P(A\cup B)=P(A)+P(B)-P(A\cap B)$</p>
 </section>
 <section id="section3">
-<h1>اصل شمول و عدم شمول</h1>
+<h6>اصل شمول و عدم شمول</h6>
   <p>حالت پایه:</p>
 $$ P(A\cup B)=P(A)+P(B)-P(A\cap B) $$<p>حالت سه‌تایی:</p>
 $$P(A\cup B\cup C)=P(A)+P(B)+P(C)-P(A\cap B)-P(A\cap C)-P(B\cap C)+P(A\cap B \cap C)$$<p>حالت تعمیم‌یافته:</p>
