--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@ init_mathjax();
             <li><a target="_blank" href="index.html">صفحه اصلی</a></li>
             <li class="dropdown"> <a class="dropdown-toggle" href="#">مباحث</a>
               <ul class="dropdown-menu">
-		<li class="dropdown"> <a class="dropdown-toggle" href="#">تئوری مجموعه‌ها و تعریف احتمال</a>
+		<ul class="dropdown-menu"> <a class="dropdown-toggle" href="#">تئوری مجموعه‌ها و تعریف احتمال</a>
 		  <li><a class="dropdown-item" href="lecture1.html">جلسه اول: نظریه مجموعه‌ها</a></li>
                   <li><a class="dropdown-item" href="lecture2.html">جلسه دوم: نظریه احتمالات</a></li>
                   <li><a class="dropdown-item" href="lecture3.html">جلسه سوم: تعریف احتمال</a></li>
-		</li>
+		</ul>
               </ul>
             </li>
             <li><a target="_blank" /*href="https://themeforest.net/user/harnishdesign/portfolio?ref=HarnishDesign*/">همکاری</a></li>
