--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@ init_mathjax();
           <ul class="navbar-nav">
             <li><a target="_blank" href="index.html">صفحه اصلی</a></li>
             <li class="dropdown"> <a class="dropdown-toggle" href="#">مباحث</a>
-              <ul class="dropdown-menu">
+              <li class="dropdown"> <a class="dropdown-toggle" href="#">مباحث</a>
 		<ul class="dropdown-menu"> <a class="dropdown-toggle" href="#">تئوری مجموعه‌ها و تعریف احتمال</a>
 		  <li><a class="dropdown-item" href="lecture1.html">جلسه اول: نظریه مجموعه‌ها</a></li>
                   <li><a class="dropdown-item" href="lecture2.html">جلسه دوم: نظریه احتمالات</a></li>
                   <li><a class="dropdown-item" href="lecture3.html">جلسه سوم: تعریف احتمال</a></li>
 		</ul>
-              </ul>
+              </li>
             </li>
             <li><a target="_blank" /*href="https://themeforest.net/user/harnishdesign/portfolio?ref=HarnishDesign*/">همکاری</a></li>
             <li><a target="_blank" /*href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign"*/> درباره ما</a></li>
