--- a/lecture2.html
+++ b/lecture2.html
@@ -122,20 +122,20 @@ init_mathjax();
 		<div id="header-nav" class="collapse navbar-collapse justify-content-end">
           <ul class="navbar-nav">
             <li><a target="_blank" href="index.html">صفحه اصلی</a></li>
-            <li class="dropdown"> <a class="dropdown-toggle" href="#">جلسه ها</a>
+            <li class="dropdown"> <a class="dropdown-toggle" href="#">مباحث</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="lecture1.html">جلسه اول</a></li>
-                <li><a class="dropdown-item" href="lecture2.html">جلسه دوم</a></li>
-                <li><a class="dropdown-item" href="lecture3.html">جلسه سوم</a></li>
+                <li class="dropdown"> <a class="dropdown-toggle" href="#">تئوری مجموعه‌ها و تعریف احتمال</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="lecture1.html">جلسه اول: نظریه مجموعه‌ها</a></li>
+                    <li><a class="dropdown-item" href="lecture2.html">جلسه دوم: نظریه احتمالات</a></li>
+                    <li><a class="dropdown-item" href="lecture3.html">جلسه سوم: تعریف احتمال</a></li>
+                  </ul>
+                </li>
               </ul>
             </li>
             <li><a target="_blank" href="https://themeforest.net/user/harnishdesign/portfolio?ref=HarnishDesign">همکاری</a></li>
             <li><a target="_blank" href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign"> درباره ما</a></li>
           </ul>
-        </div>
-        <ul class="social-icons social-icons-sm ml-lg-2 mr-2">
-          
-        </ul>
       </div>
     </nav>
     <!-- Navbar End --> 
