--- a/index.html
+++ b/index.html
@@ -153,11 +153,14 @@ init_mathjax();
 	<!-- Sidebar Navigation
 	============================ -->
 	<div class="idocs-navigation bg-light">
-      <ul class="nav flex-column ">
-        <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
-        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظریه مجموعه‌ها</a></li>
-      </ul>
-    </div>
+    	  <ul class="nav flex-column ">
+	    <h6 style="padding: 20pt;">آمار و احتمال مهندسی</h6>
+      	    <!--
+      	    <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
+      	    <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظریه مجموعه‌ها</a></li>
+            -->
+    	  </ul>
+  	</div>
     
     <!-- Docs Content
 	============================ -->
@@ -169,12 +172,12 @@ init_mathjax();
         <section id="idocs_start">
           <h3>صفحه اصلی</h3><br>
           <p>سلام خوش اومدین</p><br>
-          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران در این پروژه سعی می‌کنیم 
+          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران هستیم که در این پروژه سعی می‌کنیم 
           درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.</p><br>
           <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
-          برای دانلود‌شون می‌تونید به <a href="https://www.aparat.com/ProbStat">لینک</a> این  برید.</p><br>
+          برای دانلود‌شون می‌تونید به این <a href="https://www.aparat.com/ProbStat">لینک</a>  مراجعه کنید.</p><br>
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
-          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br>
+          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
         <hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
