--- a/lecture1.html
+++ b/lecture1.html
@@ -149,11 +149,10 @@ init_mathjax();
 	<!-- Sidebar Navigation
 	============================ -->
 	<div class="idocs-navigation bg-light">
-      <ul class="nav flex-column ">
-        <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
-        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظريه مجموعه‌ها</a></li>
-      </ul>
-    </div>
+      	  <ul class="nav flex-column ">
+            <li class="nav-item"><a class="nav-link active" href="#section1">مفاهیم پایه‌ای مجموعه‌ها</a></li>
+      	  </ul>
+    	</div>
     
     <!-- Docs Content
 	============================ -->
@@ -167,7 +166,7 @@ init_mathjax();
           <style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/jkMhT/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
           
           <br><br>
-
+	  <h6 id="#section1">مفاهیم پایه‌ای مجموعه‌ها</h6>
           <p><strong>مجموعه:</strong> دسته‌ای از عناصر متمایز را مجموعه گویند.</p>
           <p><strong>زیرمجموعه:</strong> اگر هر عضو مجموعه $A$ متعلق به مجموعه $B$ نیز باشد، مجموعه $A$ زیرمجموعه مجموعه $B$ است. به بیان ریاضی: $A\subset B$</p>
           <p><strong>مجموعه مساوی:</strong>   اگر و تنها اگر $A\subset B$ و $B\subset A$ آنگاه دو مجموعه $A$ و $B$ مساوی یکدیگر هستند.</p>
