--- a/lecture1.html
+++ b/lecture1.html
@@ -133,8 +133,10 @@ init_mathjax();
                 </li>
               </ul>
             </li>
-            <li><a target="_blank" href="https://themeforest.net/user/harnishdesign/portfolio?ref=HarnishDesign">همکاری</a></li>
+            <!--
+	    <li><a target="_blank" href="https://themeforest.net/user/harnishdesign/portfolio?ref=HarnishDesign">همکاری</a></li>
             <li><a target="_blank" href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign"> درباره ما</a></li>
+	    -->
           </ul>
       </div>
     </nav>
@@ -166,6 +168,7 @@ init_mathjax();
           <style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/jkMhT/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
           
           <br><br>
+	<section id="section1"> 
 	  <h6 id="#section1">مفاهیم پایه‌ای مجموعه‌ها</h6>
           <p><strong>مجموعه:</strong> دسته‌ای از عناصر متمایز را مجموعه گویند.</p>
           <p><strong>زیرمجموعه:</strong> اگر هر عضو مجموعه $A$ متعلق به مجموعه $B$ نیز باشد، مجموعه $A$ زیرمجموعه مجموعه $B$ است. به بیان ریاضی: $A\subset B$</p>
@@ -177,6 +180,7 @@ init_mathjax();
           <p><strong>مکمل یک مجموعه:</strong>         تمام اعضای مجموعه مرجع که در مجموعه $A$ نباشند را مجموعه مکمل $A$ می‌نامند و با $A^c$ یا $\bar{A}$ نمایش می‌دهند.</p>
           <p><strong>تفاضل دو مجموعه:</strong>    عناصری که تنها در یکی از دو مجموعه $A$ و $B$ باشند. به بیان ریاضی:</p>
           <p>$A-B=A\cap \bar{B}$ یا $B-A=B\cap \bar{A}$</p>
+	</section>
         <hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
