--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@ init_mathjax();
 	============================ -->
 	<div class="idocs-navigation bg-light">
     	  <ul class="nav flex-column ">
-	    <h6 style="padding: 20pt;">آمار و احتمال مهندسی</h6>
+	      <h6 style="padding-top: 20pt; padding-left: 20pt; padding-right: 20pt;">آمار و احتمال مهندسی</h6>
+        <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول</a></li>
+        <li class="nav-item"><a class="nav-link active" href="lecture2.html">جلسه دوم</a></li>
+        <li class="nav-item"><a class="nav-link active" href="lecture3.html">جلسه سوم</a></li>
       	    <!--
       	    <li class="nav-item"><a class="nav-link active" href="index.html">صفحه اصلی</a></li>
       	    <li class="nav-item"><a class="nav-link active" href="lecture1.html">جلسه اول: مقدمه‌ای بر نظریه مجموعه‌ها</a></li>
