Fixed some minor bugs!

--- a/index.html
+++ b/index.html
@@ -87,17 +87,6 @@ init_mathjax();
 
 <body data-spy="scroll" data-target=".idocs-navigation" data-offset="125">
 
-<!-- Preloader -->
-<div class="preloader">
-  <div class="lds-ellipsis">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
-<!-- Preloader End --> 
-
 <!-- Document Wrapper   
 =============================== -->
 <div id="main-wrapper"> 
@@ -184,21 +173,7 @@ init_mathjax();
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
           ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
         <hr>
-		<div class="row">
-			<div class="col-sm-6 col-lg-4">
-				<ul class="list-unstyled">
-					<li><strong>Version:</strong> 1.0</li>
-					<li><strong>Author:</strong> <a href="http://www.harnishdesign.net" target="_blank">Harnish Design</a></li>
-				</ul>
-			</div>
-			<div class="col-sm-6 col-lg-4">
-				<ul class="list-unstyled">
-					<li><strong class="font-weight-700">Created:</strong> 8 April, 2020</li>
-					<li><strong>Update:</strong> 12 May, 2020</li>
-				</ul>
-			</div>
-		</div>
-        <p class="alert alert-info">If you have any questions that are beyond the scope of this help file, Please feel free to email via <a target="_blank" href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign">Item Support Page</a>.</p>
+        <a href="lecture1.html" style="float: right;">صفحه بعد</a>
         </section>
         
 		        
@@ -235,13 +210,7 @@ init_mathjax();
 ============================ -->
 <script src="assets/vendor/jquery/jquery.min.js"></script> 
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
-<!-- Highlight JS -->
-<script src="assets/vendor/highlight.js/highlight.min.js"></script> 
-<!-- Easing --> 
-<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script> 
 <!-- Magnific Popup --> 
 <script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script> 
-<!-- Custom Script -->
-<script src="assets/js/theme.js"></script>
 </body>
 </html>
