--- a/lecture1.html
+++ b/lecture1.html
@@ -182,21 +182,9 @@ init_mathjax();
           <p>$A-B=A\cap \bar{B}$ یا $B-A=B\cap \bar{A}$</p>
 	</section>
         <hr>
-		<div class="row">
-			<div class="col-sm-6 col-lg-4">
-				<ul class="list-unstyled">
-					<li><strong>Version:</strong> 1.0</li>
-					<li><strong>Author:</strong> <a href="http://www.harnishdesign.net" target="_blank">Harnish Design</a></li>
-				</ul>
-			</div>
-			<div class="col-sm-6 col-lg-4">
-				<ul class="list-unstyled">
-					<li><strong class="font-weight-700">Created:</strong> 8 April, 2020</li>
-					<li><strong>Update:</strong> 12 May, 2020</li>
-				</ul>
-			</div>
-		</div>
-        <p class="alert alert-info">If you have any questions that are beyond the scope of this help file, Please feel free to email via <a target="_blank" href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign">Item Support Page</a>.</p>
+
+        <a href="lecture2.html" style="float: right;">صفحه بعد</a>
+        <a href="index.html" style="float: left;">صفحه قبل</a>
         </section>
         
 		        
