--- a/lecture3.html
+++ b/lecture3.html
@@ -207,6 +207,11 @@ init_mathjax();
       <p><strong>اصل ناکافی بودن دلیل:</strong>
           اگر یک آزمایش تصادفی دارای $N$ نتیجه ممکنه$ \omega_1,\omega_2,...,\omega_N$ باشد و ما هیچ اطلاعی درباره نحوه وقوع آنها نداشته باشیم، باید احتمال آنها را مساوی فرض کنیم. به بیان ریاضی:
           $$P(\omega_1 )=P(\omega_2 )=...=P(\omega_N )=\frac{1}{N} $$</p>
+
+          <hr>
+
+          <a href="lecture4.html" style="float: right;">صفحه بعد</a>
+          <a href="lecture2.html" style="float: left;">صفحه قبل</a>
 		        
         </section>
         
