--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ init_mathjax();
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
           ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
         <hr>
-        <a href="lecture1.html" style="float: right;">صفحه بعد</a>
+        <a href="lecture1.html" style="float: left;">صفحه بعد</a>
         </section>
         
 		        
