--- a/lecture2.html
+++ b/lecture2.html
@@ -220,8 +220,9 @@ $$P(A\cup B\cup C)=P(A)+P(B)+P(C)-P(A\cap B)-P(A\cap C)-P(B\cap C)+P(A\cap B \ca
 $$P(\bigcup_{i=1}^{n}E_i)=\sum_{r=1}^{n}(-1)^{r+1} \sum_{i_1\le ... \le i_r}P(E_{i_1}\cap E_{i_2}\cap ...\cap E_{i_r})$$
         <hr>
 
-        <a href="lecture3.html" style="float: right;">صفحه بعد</a>
-        <a href="lecture2.html" style="float: left;">صفحه قبل</a>
+        <a href="lecture3.html" style="float: left;">صفحه بعد</a>
+        <a href="lecture2.html" style="float: right;">صفحه قبل</a>
+        <br><br>
         </section>
         
 		        
