--- a/lecture3.html
+++ b/lecture3.html
@@ -210,8 +210,8 @@ init_mathjax();
 
           <hr>
 
-          <a href="lecture4.html" style="float: right;">صفحه بعد</a>
-          <a href="lecture2.html" style="float: left;">صفحه قبل</a>
+          <a href="lecture4.html" style="float: left;">صفحه بعد</a>
+          <a href="lecture2.html" style="float: right;">صفحه قبل</a>
 		        
         </section>
         
