--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ init_mathjax();
         <section id="idocs_start">
           <h3>صفحه اصلی</h3><br>
           <p>سلام خوش اومدین</p><br>
-          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران هستیم که در این پروژه سعی می‌کنیم 
-          درس «آمار و احتمال مهندسی» رو به شکل رایگان آموزش بدیم.</p><br>
+          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران هستیم و در این وب سایت تلاش می‌کنیم تا محتوای آموزشی رایگان و آنلاین برای درس «آمار و احتمال مهندسی» فراهم کنیم.
+شایان به ذکر است جهت آماده سازی محتوای این سایت از مباحث تدریس شده دکتر بهرک، استاد محترم دانشکده برق و کامپیوتر دانشگاه تهران بهره گرفتیم که جا داره از ایشون تشکر کنیم.</p><br>
           <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
           برای دانلود‌شون می‌تونید به این <a href="https://www.aparat.com/ProbStat">لینک</a>  مراجعه کنید.</p><br>
           <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
