--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@ init_mathjax();
 </head>
 
 <body data-spy="scroll" data-target=".idocs-navigation" data-offset="125">
+	
+<!-- Preloader -->
+<div class="preloader">
+  <div class="lds-ellipsis">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
+<!-- Preloader End --> 
 
 <!-- Document Wrapper   
 =============================== -->
@@ -165,13 +176,15 @@ init_mathjax();
 		============================ -->
         <section id="idocs_start">
           <h3>صفحه اصلی</h3><br>
-          <p>سلام خوش اومدین</p><br>
-          <p>ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران هستیم و در این وب سایت تلاش می‌کنیم تا محتوای آموزشی رایگان و آنلاین برای درس «آمار و احتمال مهندسی» فراهم کنیم.
-شایان به ذکر است جهت آماده سازی محتوای این سایت از مباحث تدریس شده دکتر بهرک، استاد محترم دانشکده برق و کامپیوتر دانشگاه تهران بهره گرفتیم که جا داره از ایشون تشکر کنیم.</p><br>
+          <p>سلام خوش اومدین 😊🍀</p><br>
+          <p style="text-align: justify;">ما جمعی از دانشجویان دانشکده فنی دانشگاه تهران هستیم و در این وبسایت 
+            تلاش می‌کنیم تا محتوای آموزشی رایگان و آنلاین برای درس «آمار و احتمال مهندسی» فراهم کنیم. 
+            شایان ذکر است جهت آماده سازی محتوای این سایت از مباحث تدریس شده دکتر بهرک، 
+            استاد محترم دانشکده برق و کامپیوتر دانشگاه تهران استفاده کردیم که جا داره از ایشون تشکر کنیم.</p><br>
           <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
           برای دانلود‌شون می‌تونید به این <a href="https://www.aparat.com/ProbStat">لینک</a>  مراجعه کنید.</p><br>
-          <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید. 
-          ایمیل دانشگاهی من: sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
+          <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید: 
+           sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
         <hr>
         <a href="lecture1.html" style="float: left;">صفحه بعد</a>
         </section>
