--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@ init_mathjax();
 
 <body data-spy="scroll" data-target=".idocs-navigation" data-offset="125">
 
+<!-- Preloader -->
+<div class="preloader">
+  <div class="lds-ellipsis">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
+<!-- Preloader End --> 
+
 <!-- Document Wrapper   
 =============================== -->
 <div id="main-wrapper"> 
@@ -210,7 +221,13 @@ init_mathjax();
 ============================ -->
 <script src="assets/vendor/jquery/jquery.min.js"></script> 
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
+<!-- Highlight JS -->
+<script src="assets/vendor/highlight.js/highlight.min.js"></script> 
+<!-- Easing --> 
+<script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script> 
 <!-- Magnific Popup --> 
 <script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script> 
+<!-- Custom Script -->
+<script src="assets/js/theme.js"></script>
 </body>
 </html>
