--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ init_mathjax();
         استاد محترم دانشکده برق و کامپیوتر دانشگاه تهران استفاده کردیم که جا داره از ایشون تشکر کنیم.</p><br>
       <p>ویدیو‌های آموزشی ما در صفحه آپارات هم قرار گرفته‌اند. 
       برای دانلود‌شون می‌تونید به این <a href="https://www.aparat.com/ProbStat">لینک</a>  مراجعه کنید.</p><br>
-      <p>راستی اگه پیشنهادی برای بهبود سایت دارید حتما با ما در میون بگذارید: 
+      <p>راستی نظرات‌تون رو حتما با ما در میون بگذارید: 
        sh.javidi98@ut.ac.ir</p><br><br><br><br><br><br><br><br><br><br>
     <hr>
     <a href="lecture1.html" style="float: left;">صفحه بعد</a>
