--- a/public/index.html
+++ b/public/index.html
@@ -8,48 +8,26 @@
     <meta name="description" content="UT PropStat" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"></script>
     <title>PropStat</title>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+      tex2jax: {
+      inlineMath: [["$","$"],["\\(","\\)"]],
+      displayMath:[["$$", "$$"], ["\\[","\\]"]]
+      },
+      showMathMenu: false,
+      messageStyle: "none"
+      });
+    </script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" dir="rtl"></div>
     <!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"></script>
-    <!-- MathJax configuration -->
-    <script type="text/x-mathjax-config">
-      init_mathjax = function() {
-          if (window.MathJax) {
-          // MathJax loaded
-              MathJax.Hub.Config({
-                  TeX: {
-                      equationNumbers: {
-                      autoNumber: "AMS",
-                      useLabelIds: true
-                      }
-                  },
-                  tex2jax: {
-                      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-                      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-                      processEscapes: true,
-                      processEnvironments: true
-                  },
-                  displayAlign: 'center',
-                  CommonHTML: {
-                      linebreaks: {
-                      automatic: true
-                      }
-                  },
-                  "HTML-CSS": {
-                      linebreaks: {
-                      automatic: true
-                      }
-                  }
-              });
-
-              MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-          }
-      }
-      init_mathjax();
-    </script>
   </body>
 </html>
