--- a/lectures/Lecture1.html
+++ b/lectures/Lecture1.html
@@ -1,8 +1,8 @@
 <html lang="en">
 	<!-- Load mathjax -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe" defer> </script>
 <!-- MathJax configuration -->
-<script type="text/x-mathjax-config">
+<script type="text/x-mathjax-config" defer>
 init_mathjax = function() {
     if (window.MathJax) {
     // MathJax loaded
