--- a/index.html
+++ b/index.html
@@ -7,13 +7,4 @@
       },
       showMathMenu: false,
       messageStyle: "none"
-      });</script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script><script type="text/javascript" src="/ProbStat/config.js"></script><script defer="defer" src="/ProbStat/static/js/main.92630ae2.js"></script><link href="/ProbStat/static/css/main.94bf3583.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root" dir="rtl"></div></body><script>
-MathJax = {
-  tex: {
-    inlineMath: [['$', '$'], ['\\(', '\\)']]
-  }
-};
-</script>
-<script id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
-</script></html>
+      });</script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script><script type="text/javascript" src="/ProbStat/config.js"></script><script defer="defer" src="/ProbStat/static/js/main.92630ae2.js"></script><link href="/ProbStat/static/css/main.94bf3583.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root" dir="rtl"></div></body></html>
