--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/ProbStat/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="UT PropStat"/><link rel="apple-touch-icon" href="/ProbStat/logo192.png"/><link rel="manifest" href="/ProbStat/manifest.json"/><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"></script><script type="text/javascript" id="MathJax-script" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.0.0/es5/latest?tex-mml-chtml.js">
-</script><title>PropStat</title><script type="text/x-mathjax-config">MathJax.Hub.Config({
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/ProbStat/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="UT PropStat"/><link rel="apple-touch-icon" href="/ProbStat/logo192.png"/><link rel="manifest" href="/ProbStat/manifest.json"/><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe"></script><title>PropStat</title><script type="text/x-mathjax-config">MathJax.Hub.Config({
       tex2jax: {
       inlineMath: [["$","$"],["\\(","\\)"]],
       displayMath:[["$$", "$$"], ["\\[","\\]"]]
