--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
     <div id="root" dir="rtl"></div>
     <!-- Load mathjax -->
   </body>
