--- a/lectures/2/Lecture2.html
+++ b/lectures/2/Lecture2.html
@@ -1,6 +1,6 @@
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="%D9%85%D8%B3%D8%A6%D9%84%D9%87-%DA%AF%D8%A7%D9%84%DB%8C%D9%84%D9%87">&#1605;&#1587;&#1574;&#1604;&#1607; &#1711;&#1575;&#1604;&#1740;&#1604;&#1607;<a class="anchor-link" href="#%D9%85%D8%B3%D8%A6%D9%84%D9%87-%DA%AF%D8%A7%D9%84%DB%8C%D9%84%D9%87">&#182;</a></h2><p>اگر سه تاس همزمان پرتاب شوند، احتمال این که مجموع حاصل 10 شود، از احتمال اینکه این مجموع 9 شود، بیشتر است.</p>
+<h2 id="%D9%85%D8%B3%D8%A6%D9%84%D9%87-%DA%AF%D8%A7%D9%84%DB%8C%D9%84%D9%87">&#1605;&#1587;&#1574;&#1604;&#1607; &#1711;&#1575;&#1604;&#1740;&#1604;&#1607;</h2><p>اگر سه تاس همزمان پرتاب شوند، احتمال این که مجموع حاصل 10 شود، از احتمال اینکه این مجموع 9 شود، بیشتر است.</p>
 <ul>
 <li>وقتی سه تاس پرتاب می‌شوند، تعداد کل حالات ممکن برابر با $6^3$ یا 216 است. تعداد حالاتی که مجموع 
 برابر با 9 می‌شود، معادل است با تعداد جواب‌های معادله $x_1+x_2+x_3=9: \qquad 1 \leq x_i \leq 6$
@@ -18,7 +18,7 @@ $$P(10)=\frac{27}{216} &gt; \frac{25}{216}=P(9)$$</p>
 <li>مجموع 9: (1,2,6) ,(1,3,5) ,(1,4,4) ,(2,2,5) ,(2,3,4) ,(3,3,3)</li>
 <li>مجموع 10: (1,3,6) ,(1,4,5) ,(2,2,6) ,(2,3,5) ,(2,4,4) ,(3,3,4)</li>
 </ul>
-<h2 id="%D9%85%D8%B3%D8%A6%D9%84%D9%87-%D8%B1%D9%88%D8%B2-%D8%AA%D9%88%D9%84%D8%AF">&#1605;&#1587;&#1574;&#1604;&#1607; &#1585;&#1608;&#1586; &#1578;&#1608;&#1604;&#1583;<a class="anchor-link" href="#%D9%85%D8%B3%D8%A6%D9%84%D9%87-%D8%B1%D9%88%D8%B2-%D8%AA%D9%88%D9%84%D8%AF">&#182;</a></h2><p>گروهی از افراد را به صورت تصادفی انتخاب می کنیم. حداقل تعداد افراد این گروه چقدر باشد تا احتمال اینکه دو نفر در این گروه روز تولد یکسانی داشته باشند، بیش از 50 درصد شود؟</p>
+<h2 id="%D9%85%D8%B3%D8%A6%D9%84%D9%87-%D8%B1%D9%88%D8%B2-%D8%AA%D9%88%D9%84%D8%AF">&#1605;&#1587;&#1574;&#1604;&#1607; &#1585;&#1608;&#1586; &#1578;&#1608;&#1604;&#1583;</h2><p>گروهی از افراد را به صورت تصادفی انتخاب می کنیم. حداقل تعداد افراد این گروه چقدر باشد تا احتمال اینکه دو نفر در این گروه روز تولد یکسانی داشته باشند، بیش از 50 درصد شود؟</p>
 <p>$A=$ روز تولد هیچ دو نفری یکسان نباشد</p>
 <p>تعداد کل حالات ممکن روز تولد $n$ فرد متمایز=$365^n$
 $$\text{تعداد حالاتی که در آن هیچ دو نفری روز تولد یکسانی ندارند}=
