--- a/lectures/4/Lecture1.html
+++ b/lectures/4/Lecture1.html
@@ -26,7 +26,7 @@ n: تعداد کل کارت های انتخاب شده  $ \:\: $   x: تعداد
 <li>هر آزمایش دو خروجی ممکن دارد : شکست و موفقیت   </li>
 <li>تعداد آزمایش های تصادفی ثابت است : n    </li>
 <li>آزمایش های تصادفی مستقل از هم نیستند (به دلیل تغییر احتمال موفقیت بر اساس نتیجه آزمایش قبلی)   </li>
-<li>احتمال موفقیت در هر آزمایش متفائت از آزمایش قبل است.</li>
+<li>احتمال موفقیت در هر آزمایش متفاوت از آزمایش قبل است.</li>
 </ul>
 <p>$ \:\: $ کاربردهای توزیع فوق هندسی :</p>
 <ul>
@@ -43,9 +43,18 @@ $max(0, 𝑛 − 𝑁 + 𝐾) ≤ 𝑥 ≤ min(𝑛,𝐾) \:\:,\:\: p = \frac{K}
 آن مشابه توزیع دوجمله ای می شود. (زیرا تغییرات احتمال موفقیت ، تغییر کمی خواهد بود)</p>
 
 </div>
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
 
+     </div>
 </div>
+</div>
+</div>
+
 </div>
