--- a/lectures/2/Lecture1.html
+++ b/lectures/2/Lecture1.html
@@ -1,72 +1,134 @@
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="%D9%85%D8%B1%D9%88%D8%B1%DB%8C-%D8%A8%D8%B1-%D8%AA%D8%B1%DA%A9%DB%8C%D8%A8%DB%8C%D8%A7%D8%AA">&#1605;&#1585;&#1608;&#1585;&#1740; &#1576;&#1585; &#1578;&#1585;&#1705;&#1740;&#1576;&#1740;&#1575;&#1578;</h2><p>ترکیبیات علم شمارش اشیاء است. در ترکیبیات شما می‌آموزید چگونه با استفاده از اصول ریاضی، فرمول‌ها و پارامتر‌های مختلف و بدون استفاده از شمارش به روش سنتی تعداد بعضی اشیاء با ویژگی‌های خاص را بشمرید .</p>
-<ul>
-<li>در علوم مهندسی با مسائل مربوط به شمارش اشیاء بسیار مواجه می‌شویم:<ol>
-<li>تعداد خروجی های موفق یا ناموفق یک آزمایش</li>
-<li>تعداد عملیات ریاضی به کار رفته در یک الگوریتم (جهت محاسبه پیچیدگی الگوریتم)</li>
-<li>در بسیاری از مسائل بهینه‌سازی</li>
-</ol>
-</li>
-<li>در آمار و احتمال، برای تعیین اندازه فضای نمونه و محاسبه احتمال از شمارش استفاده
-می‌کنیم.</li>
-</ul>
-<h2 id="%D8%A7%D8%B5%D9%84-%D8%AC%D9%85%D8%B9">&#1575;&#1589;&#1604; &#1580;&#1605;&#1593;</h2><p><strong>اصل جمع:</strong> اگر کار 1 را بتوان به $m$ طریق، و کار 2 را بتوان به $n$ طریق انجام داد، و
-اگر هر دو کار را نتوان همزمان انجام داد، آنگاه تعداد راه‌های انجام دادن کار 1 یا کار 2
-برابر با $m+n$ است.</p>
-<p><strong>تعبیر مجموع های اصل جمع:</strong> اگر مجموعه‌های محدود $A_1, A_2, \cdots, A_n$ دو به دو
-جدا از هم باشند، داریم:
-$$|A-n|+...+|A_2|+|A_1| = |A_1 \cup A_2 \cup \cdots \cup A_n|$$</p>
-<h2 id="%D8%A7%D8%B5%D9%84-%D8%B6%D8%B1%D8%A8">&#1575;&#1589;&#1604; &#1590;&#1585;&#1576;</h2><p><strong>اصل ضرب:</strong> اگر عملی به دو مرحله اول و دوم تقسیم شود و اگر مرحله اول را بتوان به
-$m$ طریق و مرحله دوم را به $n$ طریق انجام داد، آنگاه کل عمل یاد شده را می‌توان به
-$mn$ طریق انجام داد. گاهی این اصل را <strong>اصل انتخاب</strong> نیز می‌نامند.</p>
-<p><strong>تعبیر مجموع‌های اصل ضرب:</strong> اگر $A_1, A_2, ..., A_n$ مجموعه‌هایی محدود باشند،
-تعداد اعضای حاصلضرب دکارتی آنها برابر است با حاصلضرب تعداد اعضای تک تک آنها:
-$$|A-n|...|A_2|.|A_1| = |A_1 \times A_2 \times \cdots \times A_n|$$</p>
-<h2 id="%D8%AC%D8%A7%DB%8C%DA%AF%D8%B4%D8%AA-(Permutation)">&#1580;&#1575;&#1740;&#1711;&#1588;&#1578; (Permutation)</h2><p><strong>جایگشت یا ترتیب:</strong> دنباله‌ای مرتب و بدون تکرار از عناصر یک مجموعه متناهی، که
-لزوما همه عناصر مجموعه را شامل نمی‌شود.</p>
-<p>تعداد جایگشت‌های $r$ عضوی مجموع های با اندازه $n$، طبق اصل ضرب برابر است با:</p>
-$$ P(n,r) = n \times (n-1) \times \cdots \times (n-1+r)= \frac{n!}{(n-r)!}$$<ul>
-<li><p>تعداد راه‌های مرتب کردن $r$ شیء از $n$ شیء متمایز: $ P(n,r) =  \frac{n!}{(n-r)!}$</p>
-</li>
-<li><p>تعداد جایگشت‌های به طول $n$ یا تعداد کل راه‌های مرتب کردن $n$ شیء متمایز: $n!$</p>
-</li>
-<li><p>تعداد راه‌های انتخاب $r$ شیء از $n$ شیء متمایز، بدون در نظر گرفتن ترتیب: $C(n,r) = \frac{n!}{r!(n-r)!}$</p>
-</li>
-<li><p>تعداد راه‌های قرار دادن $r$ شیء غیرمتمایز در $n$ جعبه متمایز به طوری که در هر جعبه بیش از یک شیء  قرار گیرد:  $\binom{n+r-1}{r}$</p>
-</li>
-</ul>
-<h2 id="%D8%AA%D8%B1%DA%A9%DB%8C%D8%A8-(Combination)">&#1578;&#1585;&#1705;&#1740;&#1576; (Combination)</h2><p>ترکیب: مجموعه‌ای نامرتب از عناصر یک مجموعه متناهی است.</p>
-<p>تعداد ترکیب‌های $r$ عضوی یک مجموعه $n$ عضوی برابر است با تعداد جایگشت‌های $r$
-عضوی یک مجموعه $n$ عضوی تقسیم بر تعداد راه‌های مرتب کردن $r$ عضو:
-$$C(n,r) =\binom nr = \frac{P(n,r)}{r!} = \frac{n!}{r!(n-r)!}$$</p>
-<p>هر زمان که $r$ عضو از مجموعه $n$ عضوی انتخاب می‌کنیم، $n-r$ عضو باقی می‌ماند. در نتیجه انتخاب $r$ عضو از $n$ عضو با انتخاب $n-r$ عضو از $n$ عضو برابر است:
-$$\binom nr = \binom {n}{n-r}$$</p>
-<h2 id="%D8%AA%D8%B1%DA%A9%DB%8C%D8%A8-%D8%A8%D8%A7-%D9%85%D8%AC%D8%A7%D8%B2-%D8%A8%D9%88%D8%AF%D9%86-%D8%AA%DA%A9%D8%B1%D8%A7%D8%B1">&#1578;&#1585;&#1705;&#1740;&#1576; &#1576;&#1575; &#1605;&#1580;&#1575;&#1586; &#1576;&#1608;&#1583;&#1606; &#1578;&#1705;&#1585;&#1575;&#1585;</h2><p>تعداد جواب‌های صحیح و نامنفی معادله $x_{1} + x_{2} + \cdots + x_{n} = r$ برابر است با :
-$\binom {n+r-1}{r}$</p>
-<p>تعداد جواب‌های صحیح و مثبت معادله $x_{1} + x_{2} + \cdots + x_{n} = r$ برابر است با : 
-$\binom {r-1}{n-1}$</p>
-<h2 id="%D9%82%D8%A7%D8%B9%D8%AF%D9%87-%D9%BE%D8%A7%D8%B3%DA%A9%D8%A7%D9%84">&#1602;&#1575;&#1593;&#1583;&#1607; &#1662;&#1575;&#1587;&#1705;&#1575;&#1604;</h2><p>رابطه بازگشتی زیر به قاعده پاسکال معروف است:
-        $$\binom nr =  \binom {n-1}{r} + \binom {n-1}{r-1}$$</p>
-<h2 id="%D8%A7%D8%AA%D8%AD%D8%A7%D8%AF-%D8%AC%D8%A7%D8%A8%D8%AC%D8%A7%DB%8C%DB%8C">&#1575;&#1578;&#1581;&#1575;&#1583; &#1580;&#1575;&#1576;&#1580;&#1575;&#1740;&#1740;</h2>$$ k \binom nk = n \binom {n-1}{k-1}$$<h2 id="%D9%82%D8%B6%DB%8C%D9%87-%D8%AF%D9%88%D8%AC%D9%85%D9%84%D9%87%E2%80%8C%D8%A7%DB%8C">&#1602;&#1590;&#1740;&#1607; &#1583;&#1608;&#1580;&#1605;&#1604;&#1607;&#8204;&#1575;&#1740;</h2><p>برای متغیرهای $x$  و $y$ و عدد صحیح نامنفی $n$ داریم:
-$$(x+y)^n = \sum_{k=0}^{n} \binom{n}{k} x^k y^{n-k} $$</p>
-<h2 id="%D8%AA%D8%B1%DA%A9%DB%8C%D8%A8-%D8%AA%D8%B9%D9%85%DB%8C%D9%85-%DB%8C%D8%A7%D9%81%D8%AA%D9%87">&#1578;&#1585;&#1705;&#1740;&#1576; &#1578;&#1593;&#1605;&#1740;&#1605; &#1740;&#1575;&#1601;&#1578;&#1607;</h2><p>در ترکیب از $n$ شیء $r$ تا را انتخاب می‌کردیم، به عبارت دیگر این اشیاء را به دو دسته $r$ تایی و $n-r$ تایی تقسیم می‌کردیم.</p>
-<p>حال اگر $n$ شیء داشته باشیم، و بخواهیم این اشیاء را به $k$ دسته $A_1, A_2, \dots, A_k$ تقسیم کنیم که به ترتیب $r_1, r_2, \dots, r_k$ عضو داشته باشند، به طوری که $r_1+r_2+\dots+r_k=n$، آنگاه تعداد حالات ممکنه برابر است با:
-$$\binom{n}{r_1,r_2,\dots,r_k} = \frac{n!}{r_1!r_2!\dots r_k!}$$</p>
-
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
+  <div
+    class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput"
+    data-mime-type="text/markdown"
+  >
+    <h2>مروری بر ترکیبیات</h2>
+    <p>
+      ترکیبیات علم شمارش اشیاء است. در ترکیبیات شما می‌آموزید چگونه با استفاده
+      از اصول ریاضی، فرمول‌ها و پارامتر‌های مختلف و بدون استفاده از شمارش به روش
+      سنتی تعداد بعضی اشیاء با ویژگی‌های خاص را بشمرید .
+    </p>
+    <ul>
+      <li>
+        در علوم مهندسی با مسائل مربوط به شمارش اشیاء بسیار مواجه می‌شویم:
+        <ol>
+          <li>تعداد خروجی های موفق یا ناموفق یک آزمایش</li>
+          <li>
+            تعداد عملیات ریاضی به کار رفته در یک الگوریتم (جهت محاسبه پیچیدگی
+            الگوریتم)
+          </li>
+          <li>در بسیاری از مسائل بهینه‌سازی</li>
+        </ol>
+      </li>
+      <li>
+        در آمار و احتمال، برای تعیین اندازه فضای نمونه و محاسبه احتمال از شمارش
+        استفاده می‌کنیم.
+      </li>
+    </ul>
+    <h2>اصل جمع</h2>
+    <p>
+      <strong>اصل جمع:</strong> اگر کار 1 را بتوان به $m$ طریق، و کار 2 را بتوان
+      به $n$ طریق انجام داد، و اگر هر دو کار را نتوان همزمان انجام داد، آنگاه
+      تعداد راه‌های انجام دادن کار 1 یا کار 2 برابر با $m+n$ است.
+    </p>
+    <p>
+      <strong>تعبیر مجموع های اصل جمع:</strong> اگر مجموعه‌های محدود $A_1, A_2,
+      \cdots, A_n$ دو به دو جدا از هم باشند، داریم: $$|A-n|+...+|A_2|+|A_1| =
+      |A_1 \cup A_2 \cup \cdots \cup A_n|$$
+    </p>
+    <h2>اصل ضرب</h2>
+    <p>
+      <strong>اصل ضرب:</strong> اگر عملی به دو مرحله اول و دوم تقسیم شود و اگر
+      مرحله اول را بتوان به $m$ طریق و مرحله دوم را به $n$ طریق انجام داد، آنگاه
+      کل عمل یاد شده را می‌توان به $mn$ طریق انجام داد. گاهی این اصل را
+      <strong>اصل انتخاب</strong> نیز می‌نامند.
+    </p>
+    <p>
+      <strong>تعبیر مجموع‌های اصل ضرب:</strong> اگر $A_1, A_2, ..., A_n$
+      مجموعه‌هایی محدود باشند، تعداد اعضای حاصلضرب دکارتی آنها برابر است با
+      حاصلضرب تعداد اعضای تک تک آنها: $$|A-n|...|A_2|.|A_1| = |A_1 \times A_2
+      \times \cdots \times A_n|$$
+    </p>
+    <h2>جایگشت (Permutation)</h2>
+    <p>
+      <strong>جایگشت یا ترتیب:</strong> دنباله‌ای مرتب و بدون تکرار از عناصر یک
+      مجموعه متناهی، که لزوما همه عناصر مجموعه را شامل نمی‌شود.
+    </p>
+    <p>
+      تعداد جایگشت‌های $r$ عضوی مجموع های با اندازه $n$، طبق اصل ضرب برابر است
+      با:
+    </p>
+    $$ P(n,r) = n \times (n-1) \times \cdots \times (n-1+r)= \frac{n!}{(n-r)!}$$
+    <ul>
+      <li>
+        <p>
+          تعداد راه‌های مرتب کردن $r$ شیء از $n$ شیء متمایز: $ P(n,r) =
+          \frac{n!}{(n-r)!}$
+        </p>
+      </li>
+      <li>
+        <p>
+          تعداد جایگشت‌های به طول $n$ یا تعداد کل راه‌های مرتب کردن $n$ شیء
+          متمایز: $n!$
+        </p>
+      </li>
+      <li>
+        <p>
+          تعداد راه‌های انتخاب $r$ شیء از $n$ شیء متمایز، بدون در نظر گرفتن
+          ترتیب: $C(n,r) = \frac{n!}{r!(n-r)!}$
+        </p>
+      </li>
+      <li>
+        <p>
+          تعداد راه‌های قرار دادن $r$ شیء غیرمتمایز در $n$ جعبه متمایز به طوری
+          که در هر جعبه بیش از یک شیء قرار گیرد: $\binom{n+r-1}{r}$
+        </p>
+      </li>
+    </ul>
+    <h2>ترکیب (Combination)</h2>
+    <p>ترکیب: مجموعه‌ای نامرتب از عناصر یک مجموعه متناهی است.</p>
+    <p>
+      تعداد ترکیب‌های $r$ عضوی یک مجموعه $n$ عضوی برابر است با تعداد جایگشت‌های
+      $r$ عضوی یک مجموعه $n$ عضوی تقسیم بر تعداد راه‌های مرتب کردن $r$ عضو:
+      $$C(n,r) =\binom nr = \frac{P(n,r)}{r!} = \frac{n!}{r!(n-r)!}$$
+    </p>
+    <p>
+      هر زمان که $r$ عضو از مجموعه $n$ عضوی انتخاب می‌کنیم، $n-r$ عضو باقی
+      می‌ماند. در نتیجه انتخاب $r$ عضو از $n$ عضو با انتخاب $n-r$ عضو از $n$ عضو
+      برابر است: $$\binom nr = \binom {n}{n-r}$$
+    </p>
+    <h2>ترکیب با مجاز بودن تکرار</h2>
+    <p>
+      تعداد جواب‌های صحیح و نامنفی معادله $x_{1} + x_{2} + \cdots + x_{n} = r$
+      برابر است با : $\binom {n+r-1}{r}$
+    </p>
+    <p>
+      تعداد جواب‌های صحیح و مثبت معادله $x_{1} + x_{2} + \cdots + x_{n} = r$
+      برابر است با : $\binom {r-1}{n-1}$
+    </p>
+    <h2>قاعده پاسکال</h2>
+    <p>
+      رابطه بازگشتی زیر به قاعده پاسکال معروف است: $$\binom nr = \binom {n-1}{r}
+      + \binom {n-1}{r-1}$$
+    </p>
+    <h2>اتحاد جابجایی</h2>
+    $$ k \binom nk = n \binom {n-1}{k-1}$$
+    <h2>قضیه دوجمله‌ای</h2>
+    <p>
+      برای متغیرهای $x$ و $y$ و عدد صحیح نامنفی $n$ داریم: $$(x+y)^n =
+      \sum_{k=0}^{n} \binom{n}{k} x^k y^{n-k} $$
+    </p>
+    <h2>ترکیب تعمیم یافته</h2>
+    <p>
+      در ترکیب از $n$ شیء $r$ تا را انتخاب می‌کردیم، به عبارت دیگر این اشیاء را
+      به دو دسته $r$ تایی و $n-r$ تایی تقسیم می‌کردیم.
+    </p>
+    <p>
+      حال اگر $n$ شیء داشته باشیم، و بخواهیم این اشیاء را به $k$ دسته $A_1, A_2,
+      \dots, A_k$ تقسیم کنیم که به ترتیب $r_1, r_2, \dots, r_k$ عضو داشته باشند،
+      به طوری که $r_1+r_2+\dots+r_k=n$، آنگاه تعداد حالات ممکنه برابر است با:
+      $$\binom{n}{r_1,r_2,\dots,r_k} = \frac{n!}{r_1!r_2!\dots r_k!}$$
+    </p>
+  </div>
 </div>
