--- a/lectures/Foo.html
+++ b/lectures/Foo.html
@@ -121,7 +121,7 @@ h1 {
 
 </style>
 
-<h1>جزوه این جلسه در حال ساخت میباشد</h1>
+<h1>جزوه این جلسه در حال آماده سازی می‌باشد.</h1>
 <section class="error-container">
   <span><span>4</span></span>
   <span>0</span>
