--- a/lectures/2/Lecture2.html
+++ b/lectures/2/Lecture2.html
@@ -56,7 +56,7 @@
       گروه چقدر باشد تا احتمال اینکه دو نفر در این گروه روز تولد یکسانی داشته
       باشند، بیش از 50 درصد شود؟
     </p>
-    <p>$=A$ روز تولد هیچ دو نفری یکسان نباشد</p>
+    <p>$A=$ روز تولد هیچ دو نفری یکسان نباشد</p>
     <p>
          تعداد حالاتی که در آن هیچ دو نفری روز تولد یکسانی ندارند:
     </p>
