--- a/lectures/2/Lecture1.html
+++ b/lectures/2/Lecture1.html
@@ -34,7 +34,7 @@
     </p>
     <p>
       <strong>تعبیر مجموع های اصل جمع:</strong> اگر مجموعه‌های محدود $A_1, A_2,
-      \cdots, A_n$ دو به دو جدا از هم باشند، داریم: $$|A-n|+...+|A_2|+|A_1| =
+      \cdots, A_n$ دو به دو جدا از هم باشند، داریم: $$|A_1|+|A_2|+ ... +|A_n| =
       |A_1 \cup A_2 \cup \cdots \cup A_n|$$
     </p>
     <h2>اصل ضرب</h2>
@@ -47,7 +47,7 @@
     <p>
       <strong>تعبیر مجموع‌های اصل ضرب:</strong> اگر $A_1, A_2, ..., A_n$
       مجموعه‌هایی محدود باشند، تعداد اعضای حاصلضرب دکارتی آنها برابر است با
-      حاصلضرب تعداد اعضای تک تک آنها: $$|A-n|...|A_2|.|A_1| = |A_1 \times A_2
+      حاصلضرب تعداد اعضای تک تک آنها: $$|A_1|.|A_2|...|A_n| = |A_1 \times A_2
       \times \cdots \times A_n|$$
     </p>
     <h2>جایگشت (Permutation)</h2>
