--- a/lectures/1/Lecture1.html
+++ b/lectures/1/Lecture1.html
@@ -1,4 +1,4 @@
-<div id="lecture">
+<div id="main-wrapper">
   <div class="idocs-content">
     <div class="container">
       <section id="section1">
