--- a/lectures/7/Lecture2.html
+++ b/lectures/7/Lecture2.html
@@ -3,12 +3,12 @@
     class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput"
     data-mime-type="text/markdown"
   >
-<h1 id="&#1580;&#1604;&#1587;&#1607;-&#1583;&#1608;&#1605;">&#1580;&#1604;&#1587;&#1607; &#1583;&#1608;&#1605;<a class="anchor-link" href="#&#1580;&#1604;&#1587;&#1607;-&#1583;&#1608;&#1605;">&#182;</a></h1><h3 id="&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;-(Geometric)">&#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740; (Geometric)<a class="anchor-link" href="#&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;-(Geometric)">&#182;</a></h3><p>توزیع متغییر تصادفی تعداد دفعات لازم برای تکرار یک آزمایش برنولی تا رسیدن به موفقیت را توزیع هندسی میگوییم :<br>
+<h1 id="&#1580;&#1604;&#1587;&#1607;-&#1583;&#1608;&#1605;">&#1580;&#1604;&#1587;&#1607; &#1583;&#1608;&#1605;</h1><h3 id="&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;-(Geometric)">&#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740; (Geometric)</h3><p>توزیع متغییر تصادفی تعداد دفعات لازم برای تکرار یک آزمایش برنولی تا رسیدن به موفقیت را توزیع هندسی میگوییم :<br>
 $ X \sim Geo(p) : P\{X = k\} = p(1-p)^{k-1} : k = 1,2,3,... $</p>
 <p>توزیع هندسی توزیع پرکاربردی است.<br>
 این توزیع یک دنباله هندسی است و داریم :</p>
 <p>$ \sum_{k=1}^{\infty} p(1-p)^{k-1} = \sum_{m=0}^{\infty} p(1-p)^{m} = \frac{p}{1 - (1-p)} = 1$</p>
-<h3 id="&#1608;&#1740;&#1688;&#1711;&#1740;-&#1607;&#1575;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#1608;&#1740;&#1688;&#1711;&#1740; &#1607;&#1575;&#1740; &#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740;<a class="anchor-link" href="#&#1608;&#1740;&#1688;&#1711;&#1740;-&#1607;&#1575;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#182;</a></h3><p>ویژگی های یک متغییر تصادفی با توزیع هندسی:</p>
+<h3 id="&#1608;&#1740;&#1688;&#1711;&#1740;-&#1607;&#1575;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#1608;&#1740;&#1688;&#1711;&#1740; &#1607;&#1575;&#1740; &#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740;</h3><p>ویژگی های یک متغییر تصادفی با توزیع هندسی:</p>
 <ul>
 <li>آزمایش های تصادفی مستقل از هم و در شرایط یکسان انجام می گیرند.   </li>
 <li>هر آزمایش دو خروجی ممکن دارد : شکست و موفقیت   </li>
@@ -23,10 +23,10 @@ $ X \sim Geo(p) : P\{X = k\} = p(1-p)^{k-1} : k = 1,2,3,... $</p>
 <li>تعداد چاه هایی که در یک منطقه باید حفر شوند تا به یک چاه آب برسیم.   </li>
 <li>تعداد دفعاتی که یک تاس باید پرتاب شود تا عدد 6 ظاهر شود.    </li>
 </ul>
-<h3 id="&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606;-&#1608;-&#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606; &#1608; &#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587; &#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740;<a class="anchor-link" href="#&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606;-&#1608;-&#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#182;</a></h3><p>میانگین توزیع هندسی برابر است با:</p>
+<h3 id="&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606;-&#1608;-&#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#1605;&#1740;&#1575;&#1606;&#1711;&#1740;&#1606; &#1608; &#1608;&#1575;&#1585;&#1740;&#1575;&#1606;&#1587; &#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740;</h3><p>میانگین توزیع هندسی برابر است با:</p>
 <p>$E[X] = \frac{1}{p} $<br>
 $Var(X) = \frac{1-p}{p^2} = \frac{q}{p^2}$</p>
-<h5 id="&#1576;&#1740;-&#1581;&#1575;&#1601;&#1592;&#1711;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1593;&#1606;&#1583;&#1587;&#1740;">&#1576;&#1740; &#1581;&#1575;&#1601;&#1592;&#1711;&#1740; &#1578;&#1608;&#1586;&#1740;&#1593; &#1593;&#1606;&#1583;&#1587;&#1740;<a class="anchor-link" href="#&#1576;&#1740;-&#1581;&#1575;&#1601;&#1592;&#1711;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1593;&#1606;&#1583;&#1587;&#1740;">&#182;</a></h5><p>توزیع متغییر تصادفی X را بی حافظه (memoryless) گویند، اگر برای هر t و s داشته باشیم:</p>
+<h5 id="&#1576;&#1740;-&#1581;&#1575;&#1601;&#1592;&#1711;&#1740;-&#1578;&#1608;&#1586;&#1740;&#1593;-&#1607;&#1606;&#1583;&#1587;&#1740;">&#1576;&#1740; &#1581;&#1575;&#1601;&#1592;&#1711;&#1740; &#1578;&#1608;&#1586;&#1740;&#1593; &#1607;&#1606;&#1583;&#1587;&#1740;</h5><p>توزیع متغییر تصادفی X را بی حافظه (memoryless) گویند، اگر برای هر t و s داشته باشیم:</p>
 <p>$ P\{X \geq s + t\:|\:X \geq t\} = \{X \geq s\} $</p>
 <p>بی حافظه بودن توزیع هندسی به این معنی است که اگر ما t شکست متوالی  را در انجام<br>
 یک آزمایش تصادفی مشاهده کرده ایم، احتمال مشاهده s شکست دیگر قبل از رسیدن به<br>
