--- a/lectures/Foo.html
+++ b/lectures/Foo.html
@@ -3,14 +3,14 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
 .error-container {
   text-align: center;
-  font-size: 180px;
+  font-size: 160px;
   font-family: 'Catamaran', sans-serif;
   font-weight: 800;
   margin: 20px 15px;
 }
 .error-container > span {
   display: inline-block;
-  line-height: 0.7;
+  line-height: 0.2;
   position: relative;
   color: #FFB485;
 }
@@ -121,7 +121,7 @@ h1 {
 
 </style>
 
-<h1>جزوه این جلسه در حال آماده‌سازی می‌باشد. </h1>
+<h1> این جلسه در حال آماده‌سازی می‌باشد. </h1>
 <section class="error-container">
   <span><span>4</span></span>
   <span>0</span>
