--- a/lectures/1/Lecture1.html
+++ b/lectures/1/Lecture1.html
@@ -1,7 +1,7 @@
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="%D9%85%D9%82%D8%AF%D9%85%D9%87%E2%80%8C%D8%A7%DB%8C-%D8%A8%D8%B1-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1605;&#1602;&#1583;&#1605;&#1607;&#8204;&#1575;&#1740; &#1576;&#1585; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;<a class="anchor-link" href="#%D9%85%D9%82%D8%AF%D9%85%D9%87%E2%80%8C%D8%A7%DB%8C-%D8%A8%D8%B1-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#182;</a></h2><p><strong>مجموعه:</strong>
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown"></h2><p><strong>مجموعه:</strong>
     دسته‌ای از عناصر متمایز را مجموعه گویند.</p>
+<h2 id="%D9%85%D9%82%D8%AF%D9%85%D9%87%E2%80%8C%D8%A7%DB%8C-%D8%A8%D8%B1-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1605;&#1602;&#1583;&#1605;&#1607;&#8204;&#1575;&#1740; &#1576;&#1585; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;
 <p><strong>زیرمجموعه:</strong> 
 اگر هر عضو مجموعه $A$ متعلق به مجموعه $B$ نیز باشد، مجموعه $A$ زیرمجموعه مجموعه $B$ است. بیان ریاضی: $A\subset B$</p>
 <p><strong>مجموعه مساوی:</strong> 
@@ -21,7 +21,7 @@
 <p><strong>تفاضل دو مجموعه:</strong>
 عناصری که تنها در یکی از دو مجموعه $A$ و $B$ باشند. به بیان ریاضی: 
     $A-B=A\cap \bar{B}$ یا $B-A=B\cap \bar{A}$</p>
-<h2 id="%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86-%D9%BE%D8%A7%DB%8C%D9%87-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1602;&#1608;&#1575;&#1606;&#1740;&#1606; &#1662;&#1575;&#1740;&#1607; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;<a class="anchor-link" href="#%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86-%D9%BE%D8%A7%DB%8C%D9%87-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#182;</a></h2><p>1-$A\cup \Omega=\Omega$</p>
+<h2 id="%D9%82%D9%88%D8%A7%D9%86%DB%8C%D9%86-%D9%BE%D8%A7%DB%8C%D9%87-%D9%86%D8%B8%D8%B1%DB%8C%D9%87-%D9%85%D8%AC%D9%85%D9%88%D8%B9%D9%87%E2%80%8C%D9%87%D8%A7">&#1602;&#1608;&#1575;&#1606;&#1740;&#1606; &#1662;&#1575;&#1740;&#1607; &#1606;&#1592;&#1585;&#1740;&#1607; &#1605;&#1580;&#1605;&#1608;&#1593;&#1607;&#8204;&#1607;&#1575;</h2><p>1-$A\cup \Omega=\Omega$</p>
 <p>2-$A\cap \Omega=A$</p>
 <p>3-$A\cup \emptyset=A$</p>
 <p>4-$A\cap \emptyset=\emptyset$</p>
@@ -37,20 +37,20 @@
         \forall i \neq j;\: A_i \cap A_j=\emptyset\\
         A_1 \cup A_2 \cup ...\cup A_m=\Omega
     \end{align*}</p>
-<h2 id="%D8%AD%D8%A7%D8%B5%D9%84%D8%B6%D8%B1%D8%A8-%D8%AF%DA%A9%D8%A7%D8%B1%D8%AA%DB%8C">&#1581;&#1575;&#1589;&#1604;&#1590;&#1585;&#1576; &#1583;&#1705;&#1575;&#1585;&#1578;&#1740;<a class="anchor-link" href="#%D8%AD%D8%A7%D8%B5%D9%84%D8%B6%D8%B1%D8%A8-%D8%AF%DA%A9%D8%A7%D8%B1%D8%AA%DB%8C">&#182;</a></h2><p>حاصلضرب دکارتی دو مجموعه $A$ و $B$ (مجموعه $A$ با عناصر $\alpha_i$ و مجموعه $B$ با عناصر $\beta_j$) عبارت است از مجموعه تمام زوج مرتب‌های $(\alpha_i,\beta_j)$ و به صورت $A\times B=C$ نمایش داده می‌شود به طوری‌که اگر $A$ دارای $m$ عضو و $B$ دارای $n$ عضو باشد، مجموعه $C$ دارای $mn$ عضو خواهد بود.</p>
-<h2 id="%D9%81%D8%B6%D8%A7%DB%8C-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84:-$(%5COmega,F,P)$">&#1601;&#1590;&#1575;&#1740; &#1575;&#1581;&#1578;&#1605;&#1575;&#1604;: $(\Omega,F,P)$<a class="anchor-link" href="#%D9%81%D8%B6%D8%A7%DB%8C-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84:-$(%5COmega,F,P)$">&#182;</a></h2><p>فضای احتمال یا مدل احتمالاتی یک آزمایش تصادفی از عوامل زیر تشکیل می‌شود:</p>
+<h2 id="%D8%AD%D8%A7%D8%B5%D9%84%D8%B6%D8%B1%D8%A8-%D8%AF%DA%A9%D8%A7%D8%B1%D8%AA%DB%8C">&#1581;&#1575;&#1589;&#1604;&#1590;&#1585;&#1576; &#1583;&#1705;&#1575;&#1585;&#1578;&#1740;</h2><p>حاصلضرب دکارتی دو مجموعه $A$ و $B$ (مجموعه $A$ با عناصر $\alpha_i$ و مجموعه $B$ با عناصر $\beta_j$) عبارت است از مجموعه تمام زوج مرتب‌های $(\alpha_i,\beta_j)$ و به صورت $A\times B=C$ نمایش داده می‌شود به طوری‌که اگر $A$ دارای $m$ عضو و $B$ دارای $n$ عضو باشد، مجموعه $C$ دارای $mn$ عضو خواهد بود.</p>
+<h2 id="%D9%81%D8%B6%D8%A7%DB%8C-%D8%A7%D8%AD%D8%AA%D9%85%D8%A7%D9%84:-$(%5COmega,F,P)$">&#1601;&#1590;&#1575;&#1740; &#1575;&#1581;&#1578;&#1605;&#1575;&#1604;: $(\Omega,F,P)$</h2><p>فضای احتمال یا مدل احتمالاتی یک آزمایش تصادفی از عوامل زیر تشکیل می‌شود:</p>
 <p><strong>مجموعه$\Omega$:</strong>
     تمام نتایج ممکن $\omega_i$ برای آزمایش را شامل می‌شود.</p>
 <p><strong>مجموعه $F$:</strong>
 زیرمجموعه‌های مجموعه $\Omega$ که پیشامد نامیده می‌شوند.</p>
 <p><strong>تابع $P(A)$:</strong>
 طبق اصول موضوعه، به هر پیشامد $A$ عددی نسبت می‌دهد.</p>
-<h2 id="%D9%81%D8%B6%D8%A7%DB%8C-%D9%86%D9%85%D9%88%D9%86%D9%87%E2%80%8C%D9%87%D8%A7">&#1601;&#1590;&#1575;&#1740; &#1606;&#1605;&#1608;&#1606;&#1607;&#8204;&#1607;&#1575;<a class="anchor-link" href="#%D9%81%D8%B6%D8%A7%DB%8C-%D9%86%D9%85%D9%88%D9%86%D9%87%E2%80%8C%D9%87%D8%A7">&#182;</a></h2><p><strong>آزمایش تصادفی:</strong>
+<h2 id="%D9%81%D8%B6%D8%A7%DB%8C-%D9%86%D9%85%D9%88%D9%86%D9%87%E2%80%8C%D9%87%D8%A7">&#1601;&#1590;&#1575;&#1740; &#1606;&#1605;&#1608;&#1606;&#1607;&#8204;&#1607;&#1575;</h2><p><strong>آزمایش تصادفی:</strong>
 آزمایشی است که نتیجه آن از پیش مشخص نیست اما در عین حال همه نتایج آن قابل پیش‌بینی هستند.</p>
 <p><strong>فضای نمونه‌ها:</strong>
     مجموعه کلیه نتایج ممکن برای یک آزمایش تصادفی است و با $\Omega$ و یا $S$ نمایش داده می‌شود.</p>
-<h2 id="%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#1662;&#1740;&#1588;&#1575;&#1605;&#1583;<a class="anchor-link" href="#%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#182;</a></h2><p>هر زیرمجموعه‌ای از فضای نمونه یک پیشامد است. می‌گوییم پیشامد $A$ اتفاق افتاده هرگاه نتیجه آزمایش یکی از اعضای مجموعه $A$ باشد.</p>
-<h2 id="%D8%A7%D9%86%D9%88%D8%A7%D8%B9-%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#1575;&#1606;&#1608;&#1575;&#1593; &#1662;&#1740;&#1588;&#1575;&#1605;&#1583;<a class="anchor-link" href="#%D8%A7%D9%86%D9%88%D8%A7%D8%B9-%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#182;</a></h2><p><strong>پیشامد حتمی $(Sure Event)$:</strong>
+<h2 id="%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#1662;&#1740;&#1588;&#1575;&#1605;&#1583;</h2><p>هر زیرمجموعه‌ای از فضای نمونه یک پیشامد است. می‌گوییم پیشامد $A$ اتفاق افتاده هرگاه نتیجه آزمایش یکی از اعضای مجموعه $A$ باشد.</p>
+<h2 id="%D8%A7%D9%86%D9%88%D8%A7%D8%B9-%D9%BE%DB%8C%D8%B4%D8%A7%D9%85%D8%AF">&#1575;&#1606;&#1608;&#1575;&#1593; &#1662;&#1740;&#1588;&#1575;&#1605;&#1583;</h2><p><strong>پیشامد حتمی $(Sure Event)$:</strong>
     پیشامد $\Omega$ پیشامد حتمی است.</p>
 <p><strong>پیشامد ناممکن $(Null Event)$:</strong>
     پیشامد $\Omega$ پیشامد ناممکن یا خنثی است.</p>
